# LabFlow

./: .gitattributes  .gitignore  LICENSE  README.md  labflow_migration.sql
backend/: .env.example  .env.prod  build_backend_onefile.ps1  pyproject.toml  requirements.txt  test_data.sql
backend/alembic/: env.py
backend/alembic/versions/: 1fa05e15d66e_create_notification_table.py  7af038960a21_add_attachment_to_notification.py  90e3a49ab18b_create_agent_log_table.py  b3d166389bb2_initial_migration.py  ef56d38fbb59_initial_migration.py
backend/app/: main.py
backend/app/agent/schemas/: __init__.py  deps.py  (+1 more)
backend/app/api/: deps.py
backend/app/core/: __init__.py  agents.py  config.py  database.py  environments.py  exceptions.py  security.py  validators.py
backend/app/crud/: __init__.py  agent_log.py  approval.py  instrument.py  lab.py  notification.py  reservation.py  tag.py  user.py
backend/app/db/: base.py  session.py
backend/app/exceptions/: base.py  business.py  exceptions.py  handlers.py  instrument.py  lab.py
backend/app/models/: __init__.py  agent_log.py  approval.py  instrument.py  instrument_log.py  lab.py  lab_log.py  lab_user.py  lab_user_log.py  notification.py  reservation.py  tag.py  tag_log.py  tag_user.py  tag_user_log.py  user.py  user_log.py
backend/app/schemas/: approval.py  base.py  instrument.py  lab.py  notification.py  reservation.py  tag.py  token.py  user.py
backend/app/services/: approval.py  auth.py  instrument.py  lab.py  reservation.py  statistics.py  tag.py
backend/app/utils/: context_storage.py  rate_limiter.py
(+132 files in other folders)
