[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "asyncmy>=0.2.11",
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
